src/objects/DMMAX__DIESetting__c/DMMAX__DIESetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Altify Max</label>
</CustomObject>