src/objects/DMMAX__DIESetting__c/fields/DMMAX__ChatterDaysToRepeat__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__ChatterDaysToRepeat__c</fullName>
    <label>Chatter Days To Repeat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>