src/objects/DMMAX__DIESetting__c/fields/DMMAX__Disable_Collaboration_Map_Node_Trigger__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__Disable_Collaboration_Map_Node_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Collaboration Map Node Trigger</label>
    <type>Checkbox</type>
</CustomField>