src/objects/DMMAX__DIESetting__c/fields/DMMAX__EmailDurationGap__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__EmailDurationGap__c</fullName>
    <description>Number of days between sending digest emails</description>
    <label>Email Duration Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>